--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,7 +19,7 @@
                              <section class="text-center col-12">
                                  <hr>
                                  <p>Login to continue</p>             
-                                 <a routerLink="/signup"><button class="btn btn-primary rounded-pill text-uppercase">Login</button></a>
+                                 <a routerLink="/userLogin"><button class="btn btn-primary rounded-pill text-uppercase">Login</button></a>
                              </section>
                          </div>
                      </div>  
@@ -38,7 +38,7 @@
                             <section class="text-center col-12">
                                 <hr>
                                 <p>Login to continue</p>             
-                                <a routerLink="/signup"><button class="btn btn-primary rounded-pill text-uppercase">Login</button></a>
+                                <a routerLink="userLogin"><button class="btn btn-primary rounded-pill text-uppercase">Login</button></a>
                              </section>
                         </div>
                     </div>  
@@ -58,7 +58,7 @@
                             <section class="text-center col-12">
                                 <hr>
                                 <p>Login to continue</p>             
-                                <a routerLink="/signup"><button class="btn btn-primary rounded-pill text-uppercase">Login</button></a>
+                                <a routerLink="/userLogin"><button class="btn btn-primary rounded-pill text-uppercase">Login</button></a>
                             </section>
                         </div>
                     </div>  
@@ -75,4 +75,5 @@
         <span class="visually-hidden">Next</span>
         </button>
 </div>
+
 
