user login pagecompleted

--- a/src/app/admin-login/admin-login.component.html
+++ b/src/app/admin-login/admin-login.component.html
@@ -13,7 +13,7 @@
                     <h3>Login</h3>
                   </div>
                   <div class="card-body">
-                    <form class="form mx-2" #userlogin="ngForm" (ngSubmit)="loginUser()">
+                    <form class="form mx-2" #userlogin="ngForm" (ngSubmit)="loginAdmin()">
                       <div class="form-group">
                         <label for="username">Username</label>   
                         <input type="text" placeholder="Enter username" class="form-control" [(ngModel)]="User.username" name="username" #username="ngModel" required>
