--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,7 +23,7 @@
           <a class="nav-link text-white" style="font-size: large;" routerLink="/AddHall" routerLinkActive="active" *ngIf="_auth.loggedIn()">Add Hall</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white"  style="font-size: large;" routerLinkActive="active" *ngIf="_auth.loggedIn()" (click)="logoutUser()" >Logout</a>
+          <a class="nav-link text-white"  style="font-size: large; cursor:pointer" routerLinkActive="active" *ngIf="_auth.loggedIn()" (click)="logoutUser()" >Logout</a>
         </li>
       </ul>
     </div>
